--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,19 @@ CHANGE LOG
 All notable changes to this project will be documented in this file.
 This project adheres to [Semantic Versioning](http://semver.org/).
 
-0.1.1 - 2014-06-10
+0.1.3 - 2015-6-14
+Added
+- AutoPartitioning as default disk creation scheme.
+
+0.1.2 - 2015-06-10
+Changes
+- Kernel.org mirror instead of CentOS default location
+Fixes
+- User's password BUG resolved
+- Whitespacing BUG resolved
+- EPEL temporarily removed
+
+0.1.1 - 2015-06-10
 Added
 - DHCP and STATIC IPv6 configuration options.
 - Enhanced package selection to support WS class environments.
