--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,13 @@ CHANGE LOG
 All notable changes to this project will be documented in this file.
 This project adheres to [Semantic Versioning](http://semver.org/).
 
+0.2.0 - 2015-6-23
+Changes
+- Ported to Python 3.
+- PEP8 Compliance
+Added
+- Group package selection.
+
 0.1.3 - 2015-6-14
 Added
 - AutoPartitioning as default disk creation scheme.
