--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,10 @@ CHANGE LOG
 All notable changes to this project will be documented in this file.
 This project adheres to [Semantic Versioning](http://semver.org/).
 
+0.2.1 - 2015-6-26
+Added
+- Post-Install scripting capabilities.
+
 0.2.0 - 2015-6-23
 Changes
 - Ported to Python 3.
